[gd_scene load_steps=12 format=3 uid="uid://b6gggfmrvxsi0"]

[ext_resource type="Script" path="res://enemy.gd" id="1_aloso"]
[ext_resource type="Texture2D" uid="uid://ck0v6j2keotxq" path="res://Assets/galaga enemy1.png" id="1_oyi27"]
[ext_resource type="AudioStream" uid="uid://7l8y2f5phsxn" path="res://Assets/Enemy_Shoot.ogg" id="3_x8ula"]
[ext_resource type="AudioStream" uid="uid://172cwfm02jy2" path="res://Assets/Enemy_Died.ogg" id="4_oprb5"]
[ext_resource type="AudioStream" uid="uid://d2i4tthho05b3" path="res://Assets/enemy_Hit.ogg" id="5_pf0ei"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3o22o"]
size = Vector2(14, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s56oi"]
size = Vector2(6, 8)

[sub_resource type="Gradient" id="Gradient_vlih5"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_v4scx"]
gradient = SubResource("Gradient_vlih5")
width = 10

[sub_resource type="Gradient" id="Gradient_jol2u"]
offsets = PackedFloat32Array(0.00645161)
colors = PackedColorArray(0.760784, 0, 0.270588, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ybvf1"]
gradient = SubResource("Gradient_jol2u")
width = 10

[node name="Enemy" type="CharacterBody2D"]
rotation = -1.5708
scale = Vector2(4, 4)
collision_layer = 2
collision_mask = 9
script = ExtResource("1_aloso")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_oyi27")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.94055e-07, 4)
shape = SubResource("RectangleShape2D_3o22o")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(1.90739e-07, -3)
shape = SubResource("RectangleShape2D_s56oi")

[node name="patience" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="dir" type="Timer" parent="."]
unique_name_in_owner = true

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(10.0001, -21)
rotation = 1.5708

[node name="enemy_hp" type="TextureProgressBar" parent="Node2D"]
unique_name_in_owner = true
offset_left = 11.0
offset_top = -0.999961
offset_right = 61.0
offset_bottom = 39.0
scale = Vector2(2.07923, 2.07923)
max_value = 3.0
value = 3.0
rounded = true
texture_under = SubResource("GradientTexture1D_v4scx")
texture_progress = SubResource("GradientTexture1D_ybvf1")
metadata/_edit_use_anchors_ = true

[node name="enemy_fire_rate" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="enemy_bullet_marker" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-7.23998e-06, 2)
rotation = 1.5708

[node name="move_on_spawn" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="sfx_enemy_died" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_oprb5")

[node name="sfx_shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_x8ula")

[node name="sfx_hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_pf0ei")

[connection signal="timeout" from="patience" to="." method="_on_patience_timeout"]
[connection signal="timeout" from="dir" to="." method="_on_dir_timeout"]
[connection signal="timeout" from="enemy_fire_rate" to="." method="_on_enemy_fire_rate_timeout"]
[connection signal="timeout" from="move_on_spawn" to="." method="_on_move_on_spawn_timeout"]
